# RespiClint

./: CMakeLists.txt  ResPiClint
doc/: 程序说明文档.md
include/: cvui.h  gpio.h  tcp_camera.h
include/opencv2/: cvconfig.h  xfeatures2d.hpp
include/opencv2/stitching/detail/: matchers.hpp
py/: camera3.py  clint.py  server.py  server1.py  videoprocess.py
src/: gpio.cpp  main.cpp  tcp_camera.cpp  tcp_net_socket.cpp
